# UML

./: .basic_object-private.h.swp  .basic_object.c.swp  .canvas.c.swp  .composite_object.c.swp  .plugin_manager.c.swp  .port_object.c.swp  .tool_plugin.h.swp  CMakeLists.txt  README.md  application.c  application.h  basic_object-private.h  basic_object-protected.h  basic_object.c  basic_object.h  basic_types.h  canvas-private.h  canvas-protected.h  canvas.c  canvas.h  class_object.h  common.h  component-private.h  component-protected.h  component.c  component.h  composite_object.c  composite_object.h  double_list-template.h  general_object-type.h  general_object.c  general_object.h  general_object_pool.c  general_object_pool.h  gui_form.css  gui_form.glade  gui_form.glade~  image.h  line-private.h  line-protected.h  (+28 more)
basic_type/: CMakeLists.txt  ellipse.c  ellipse.h  image.c  image.h  line_path.c  line_path.h  point.c  point.h  point_list.c  point_list.h  rectangle.c  rectangle.h  rgba_color.h  xstring.c  xstring.h
cmake/modules/: GResource.cmake
plugins/: CMakeLists.txt
plugins/association_line/: CMakeLists.txt  association_line-private.h  association_line.c  association_line.h  association_line_factory.c  association_line_factory.h  association_line_plugin.c  association_line_plugin.css  association_line_plugin.h  association_line_plugin.resource.xml  association_line_plugin.ui  resource.c  resource.h
plugins/class/: .CMakeLists.txt.swp  .class_plugin.c.swp  CMakeLists.txt  class_object.c  class_object.h  class_plugin.c  class_plugin.css  class_plugin.h  class_plugin.resource.xml  class_plugin.ui  resource.c  resource.h
plugins/composition_line/: CMakeLists.txt  composition_line-private.h  composition_line.c  composition_line.h  composition_line_factory.c  composition_line_factory.h  composition_line_plugin.c  composition_line_plugin.css  composition_line_plugin.h  composition_line_plugin.resource.xml  composition_line_plugin.ui  resource.c  resource.h
plugins/generalization_line/: CMakeLists.txt  generalization_line-private.h  generalization_line.c  generalization_line.h  generalization_line.ui  generalization_line_factory.c  generalization_line_factory.h  generalization_line_plugin.c  generalization_line_plugin.css  generalization_line_plugin.h  generalization_line_plugin.resource.xml  resource.c  resource.h
plugins/select/: .CMakeLists.txt.swp  .change_object_name.ui.swp  .select.c.swp  CMakeLists.txt  change_object_name.ui  resource.c  resource.h  select.c  select.h  select_plugin.css  select_plugin.resource.xml  select_plugin.ui
plugins/use_case/: CMakeLists.txt  resource.c  resource.h  use_case_object.c  use_case_object.h  use_case_plugin.c  use_case_plugin.css  use_case_plugin.h  use_case_plugin.resource.xml  use_case_plugin.ui
